--- a/index.html
+++ b/index.html
@@ -8,14 +8,19 @@
     <title>Member</title>
     <link rel="stylesheet" href="style.css" />
     <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We"
-      crossorigin="anonymous"
-    />
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css"
+    rel="stylesheet"
+    integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We"
+    crossorigin="anonymous"
+  />
   </head>
   <body>
     <div class="container">
+
+      <div class="form-check form-switch form-control-lg">
+        <!--switch görüntüsü elde ediyoruz!-->
+        <input type="checkbox" class="form-check-input" />
+      </div>
 
       <div class="container">
         <div class="row">
