--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
       <div class="form-check form-switch form-control-lg">
         <!--switch görüntüsü elde ediyoruz!-->
-        <input type="checkbox" class="form-check-input" />
+        <input type="checkbox" class="form-check-input" id="switchValue" onclick= changeBodyBg() />
       </div>
 
       <div class="container">
@@ -44,7 +44,7 @@
       </nav> -->
 
       <div class="card-group mt-4">
-        <div class="card p-5 border-0" style="width: 18rem">
+        <div class="card p-5 border-0 " style="width: 18rem">
           <div class="img-container d-flex">
             <img
               src="./images/photo1.png"
@@ -58,7 +58,7 @@
           </div>
         </div>
 
-        <div class="card p-5 mt-5 border-0" style="width: 18rem">
+        <div class="card p-5 mt-5 border-0 " style="width: 18rem">
           <img
             src="./images/photo2.png"
             class="card-img-top rounded shadow-lg"
@@ -68,7 +68,7 @@
             <p class="card-text">Saba Cabrera</p>
           </div>
         </div>
-        <div class="card p-5 border-0" style="width: 18rem">
+        <div class="card p-5 border-0 " style="width: 18rem">
           <img
             src="./images/photo3.png"
             class="card-img-top rounded shadow-lg"
